Require Java 21 and remove compatibility cruft
- require Java 21 and Maven 3.9, with compiler warnings treated as errors
- run GitHub Actions only on Java 21
- replace immutable boilerplate with records and modern record accessors
- use Java 21 switch expressions, Math.clamp, Math.ceilDiv and thread factories
- simplify cache keys and tests while preserving rendering behaviour
- advance the application to 0.4.0