@@ -4,7 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.awt.image.BufferedImage;
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -24,7 +24,7 @@ class AsyncRenderServiceTest {
         final AtomicLong deliveredSequence = new AtomicLong();
 
         final RenderEngine engine = (request, token) -> {
-            if (request.getSequence() == 1) {
+            if (request.sequence() == 1) {
                 firstStarted.countDown();
                 while (!token.isCancelled()) {
                     Thread.yield();
@@ -39,7 +39,7 @@ class AsyncRenderServiceTest {
             assertTrue(firstStarted.await(2, TimeUnit.SECONDS));
             service.submit(request(), result -> {
                 callbacks.incrementAndGet();
-                deliveredSequence.set(result.getSequence());
+                deliveredSequence.set(result.sequence());
                 delivered.countDown();
             }, throwable -> { });
 
@@ -51,14 +51,14 @@ class AsyncRenderServiceTest {
 
     private static RenderRequest request() {
         final PlotSnapshot snapshot = new PlotSnapshot(CurveType.LIPSE,
-                Arrays.asList(new Focus(0, 0, 1)), 0, 1, 1,
+                List.of(new Focus(0, 0, 1)), 0, 1, 1,
                 new Viewport(-1, 1, -1, 1), false, false, true, false, -1);
         return new RenderRequest(snapshot, 2, 2, RenderQuality.PREVIEW);
     }
 
     private static RenderResult result(final RenderRequest request) {
         return new RenderResult(new BufferedImage(2, 2, BufferedImage.TYPE_INT_ARGB),
-                request.getSequence(), request.getQuality(), 0, 1,
+                request.sequence(), request.quality(), 0, 1,
                 new Point2(0, 0), new Point2(1, 1), 1);
     }
 }
